18590
{code}
object foo {
  val foo = if (bar) s"x" else s""
  val bar = true
}
{code}
fails with:
{noformat}
test.scala:3: error: ';' expected but 'val' found.
val bar = true
^
one error found
{noformat}
